--- a/iOS-Overlay/css/iosOverlay.css
+++ b/iOS-Overlay/css/iosOverlay.css
@@ -1,6 +1,6 @@
 .ui-ios-overlay {
     z-index: 99999;
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     width: 200px;
